Change file name and fix image bugs

--- a/frontend/src/Login/LoginPanel.css
+++ b/frontend/src/Login/LoginPanel.css
@@ -8,7 +8,7 @@
     padding-right: 105px;
     padding-bottom: 58px;
     padding-left: 105px;
-    background-image: url("https://cdn.builder.io/api/v1/image/assets%2FTEMP%2F5f90b93676484097bded2c2fba3f9c1f");
+    background-image: url("../image/Login.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
