--- a/frontend/src/meeting/MeetingList.css
+++ b/frontend/src/meeting/MeetingList.css
@@ -8,7 +8,7 @@
     padding-right: 634px;
     padding-bottom: 240px;
     padding-left: 634px;
-    background-image: url("https://cdn.builder.io/api/v1/image/assets%2FTEMP%2F4bd7694379234a03a37c20aaba74bac5");
+    background-image: url("../image/Meeting.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
