--- a/frontend/src/meeting/MeetingDetails.css
+++ b/frontend/src/meeting/MeetingDetails.css
@@ -8,7 +8,7 @@
     padding-right: 713px;
     padding-bottom: 196px;
     padding-left: 713px;
-    background-image: url("https://cdn.builder.io/api/v1/image/assets%2FTEMP%2Ffb115b6c43df4050b2464af16807d447");
+    background-image: url("../image/Meeting.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
