--- a/frontend/src/meeting/PanellistHome.css
+++ b/frontend/src/meeting/PanellistHome.css
@@ -6,7 +6,7 @@
     padding-right: 220px;
     padding-bottom: 340px;
     padding-left: 220px;
-    background-image: url("https://cdn.builder.io/api/v1/image/assets%2FTEMP%2Fbaf11bbc168d408b857d0a142fb6bb44");
+    background-image: url("../image/Meeting.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
