--- a/frontend/src/meeting/MeetingDetails.css
+++ b/frontend/src/meeting/MeetingDetails.css
@@ -139,6 +139,8 @@
 }
 
 .div-13 {
+    font-size: 16px;
+    font-weight: 550;
     display: flex;
     max-width: 453px;
     height: 72px;
@@ -185,7 +187,6 @@
 .div-17 {
     display: flex;
     flex-direction: row;
-    max-width: 70px;
     justify-content: flex-start;
     align-items: flex-start;
     margin-top: 30px;
