Add iframe functions and add new folders

--- a/frontend/src/meeting/meeting/MeetingDetails.css
+++ b/frontend/src/meeting/meeting/MeetingDetails.css
@@ -8,7 +8,7 @@
     padding-right: 713px;
     padding-bottom: 196px;
     padding-left: 713px;
-    background-image: url("../image/Meeting.jpg");
+    background-image: url("../../image/Meeting.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
