--- a/frontend/src/meeting/meeting/MeetingList.css
+++ b/frontend/src/meeting/meeting/MeetingList.css
@@ -252,7 +252,7 @@
     padding-right: 645px;
     padding-bottom: 240px;
     padding-left: 645px;
-    background-image: url("https://cdn.builder.io/api/v1/image/assets%2FTEMP%2F13ec9ffcf9344a999f4762e3c457c04d");
+    background-image: url("../../image/Meeting.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
