--- a/frontend/src/meeting/meeting/MeetingDetails.css
+++ b/frontend/src/meeting/meeting/MeetingDetails.css
@@ -1,140 +1,138 @@
-.div {
+.div 
+{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 196px 713px;
-    gap: 10px;
-    position: relative;
-    width: 1920px;
-    height: 1080px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
-
-.div-2 {
+  
+.div-2 
+{
     display: flex;
     flex-direction: column;
     max-width: 494px;
     border-radius: 20px;
-    padding-top: 18px;
-    padding-right: 21px;
-    padding-bottom: 18px;
-    padding-left: 21px;
+    padding: 18px 21px;
     background-color: rgba(255, 255, 255, 1);
 }
 
+@media (max-width: 768px) {
+.div {
+    padding: 50px 0;
+}
+
+.div-2 {
+    max-width: 100%;
+    border-radius: 0;
+}
+}
+
+@media (min-width: 768px) {
+.div {
+    padding: 196px 0;
+}
+
+.div-2 {
+    max-width: 452px;
+}
+}
+
 .div-3 {
-    display: flex;
+display: flex;
 }
 
 @media (max-width: 999px) {
-    .div-3 {
-        flex-direction: column;
-        align-items: stretch;
-    }
+.div-3 {
+    flex-direction: column;
+    align-items: stretch;
+}
 }
 
 .column {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: calc(102.03% - 0px);
-    margin-left: 0px;
+display: flex;
+flex-direction: column;
+line-height: normal;
+width: calc(102.03% - 0px);
+margin-left: 0px;
 }
 
 @media (max-width: 999px) {
-    .column {
-        width: 100%;
-    }
+.column {
+    width: 100%;
+}
 }
 
 .div-4 {
-    display: flex;
-    flex-direction: column;
-    max-width: 452px;
-    justify-content: flex-start;
-    align-items: center;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: center;
 }
 
 .div-5 {
-    display: flex;
-    flex-direction: column;
-    max-width: 452px;
-    justify-content: flex-start;
-    align-items: flex-start;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: flex-start;
 }
 
 .div-6 {
-    max-width: 39px;
-    color: rgba(0, 0, 0, 1);
-    font-size: 30px;
-    letter-spacing: 0%;
-    text-align: left;
-    font-family: "Inter", sans-serif;
+max-width: 39px;
+color: rgba(0, 0, 0, 1);
+font-size: 30px;
+letter-spacing: 0%;
+text-align: left;
+font-family: "Inter", sans-serif;
 }
 
 .div-7 {
-    display: flex;
-    max-width: 453px;
-    height: 72px;
-    width: 453px;
-    margin-top: 10px;
-    border-radius: 10px;
-    border-color: rgba(0, 0, 0, 1);
-    border-width: 2px;
-    border-style: solid;
-    background-color: rgba(217, 217, 217, 1);
+display: flex;
+max-width: 453px;
+height: 72px;
+width: 453px;
+margin-top: 10px;
+border-radius: 10px;
+border-color: rgba(0, 0, 0, 1);
+border-width: 2px;
+border-style: solid;
+background-color: rgba(217, 217, 217, 1);
 }
 
 .div-8 {
-    display: flex;
-    flex-direction: column;
-    max-width: 452px;
-    justify-content: flex-start;
-    align-items: flex-start;
-    margin-top: 30px;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: flex-start;
+margin-top: 30px;
 }
 
 .div-9 {
-    max-width: 159px;
-    color: rgba(0, 0, 0, 1);
-    font-size: 30px;
-    letter-spacing: 0%;
-    text-align: left;
-    font-family: "Inter", sans-serif;
-}
-
-.div-10 {
-    display: flex;
-    max-width: 453px;
-    height: 72px;
-    width: 453px;
-    margin-top: 10px;
-    border-radius: 10px;
-    border-color: rgba(0, 0, 0, 1);
-    border-width: 2px;
-    border-style: solid;
-    background-color: rgba(217, 217, 217, 1);
+max-width: 159px;
+color: rgba(0, 0, 0, 1);
+font-size: 30px;
+letter-spacing: 0%;
+text-align: left;
+font-family: "Inter", sans-serif;
 }
 
 .div-11 {
-    display: flex;
-    flex-direction: column;
-    max-width: 452px;
-    justify-content: flex-start;
-    align-items: flex-start;
-    margin-top: 30px;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: flex-start;
+margin-top: 30px;
 }
 
 .div-12 {
-    max-width: 143px;
-    color: rgba(0, 0, 0, 1);
-    font-size: 30px;
-    letter-spacing: 0%;
-    text-align: left;
-    font-family: "Inter", sans-serif;
+max-width: 143px;
+color: rgba(0, 0, 0, 1);
+font-size: 30px;
+letter-spacing: 0%;
+text-align: left;
+font-family: "Inter", sans-serif;
 }
 
 .div-13 {
