- install react bootstrap - redo login student form

--- a/frontend/src/Login/Login.css
+++ b/frontend/src/Login/Login.css
@@ -1,286 +1,21 @@
-.div {
-    display: flex;
-    flex-direction: column;
-    max-width: 1920px;
-    justify-content: flex-start;
-    align-items: center;
-    padding-top: 45px;
-    padding-bottom: 45px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+.color-overlay {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 100%;
+  width: 100%;
+  mix-blend-mode: normal;
 }
 
-.div-2 {
-    display: flex;
-    flex-direction: column;
-    max-width: 1665px;
-    justify-content: flex-start;
-    align-items: center;
+form {
+  background-color: white;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
 
-.div-3 {
-    display: flex;
-    flex-direction: column;
-    max-width: 1665px;
-}
-
-.div-4 {
-    display: flex;
-}
-
-@media (max-width: 999px) {
-    .div-4 {
-        flex-direction: column;
-        align-items: stretch;
-    }
-}
-
-.column {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: calc(51.76% - 10px);
-    margin-left: 0px;
-}
-
-@media (max-width: 999px) {
-    .column {
-        width: 100%;
-    }
-}
-
-.div-5 {
-    display: flex;
-    position: relative;
-    min-width: 20px;
-    min-height: 20px;
-    max-width: 500px;
-    width: 60.06%;
-}
-
-.image {
-    object-fit: cover;
-    object-position: center;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-}
-
-.image-sizer {
-    width: 100%;
-    padding-top: 43.1640625%;
-    pointer-events: none;
-    font-size: 0;
-}
-
-.column-2 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: calc(84.37% - 10px);
-    margin-left: 20px;
-}
-
-@media (max-width: 999px) {
-    .column-2 {
-        width: 100%;
-    }
-}
-
-.welcome-to-the-online-q-a-syst {
-    max-width: 815px;
-    color: rgba(255, 255, 255, 1);
-    font-size: 48px;
-    letter-spacing: 0%;
-    text-align: left;
-    font-family: "Inter", sans-serif;
-}
-
-.div-6 {
-    display: flex;
-    flex-direction: column;
-    max-width: 367px;
-    margin-top: 100px;
-    border-radius: 20px;
-    padding-top: 18px;
-    padding-right: 21px;
-    padding-bottom: 18px;
-    padding-left: 21px;
-    background-color: rgba(255, 255, 255, 1);
-}
-
-.div-7 {
-    display: flex;
-}
-
-@media (max-width: 999px) {
-    .div-7 {
-        flex-direction: column;
-        align-items: stretch;
-    }
-}
-
-.column-3 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: calc(102.85% - 0px);
-    margin-left: 0px;
-}
-
-@media (max-width: 999px) {
-    .column-3 {
-        width: 100%;
-    }
-}
-
-.div-8 {
-    display: flex;
-    flex-direction: column;
-    max-width: 325px;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.div-9 {
-    display: flex;
-    flex-direction: column;
-    max-width: 325px;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    background-color: rgba(44, 92, 218, 1);
-}
-
-.div-10 {
-    display: flex;
-}
-
-@media (max-width: 999px) {
-    .div-10 {
-        flex-direction: column;
-        align-items: stretch;
-    }
-}
-
-.column-4 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: calc(92.57% - 0px);
-    margin-left: 0px;
-}
-
-@media (max-width: 999px) {
-    .column-4 {
-        width: 100%;
-    }
-}
-
-.div-11 {
-    max-width: 274px;
-    color: rgba(255, 255, 255, 1);
-    font-size: 30px;
-    line-height: 40px;
-    letter-spacing: 0%;
-    text-align: left;
-    font-family: "Inter", sans-serif;
-}
-
-.div-12 {
-    display: flex;
-    flex-direction: column;
-    max-width: 325px;
-    margin-top: 90px;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    background-color: rgba(44, 92, 218, 1);
-}
-
-.div-13 {
-    display: flex;
-}
-
-@media (max-width: 999px) {
-    .div-13 {
-        flex-direction: column;
-        align-items: stretch;
-    }
-}
-
-.column-5 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: calc(103.04% - 0px);
-    margin-left: 0px;
-}
-
-@media (max-width: 999px) {
-    .column-5 {
-        width: 100%;
-    }
-}
-
-.div-14 {
-    max-width: 305px;
-    color: rgba(255, 255, 255, 1);
-    font-size: 30px;
-    line-height: 40px;
-    letter-spacing: 0%;
-    text-align: left;
-    font-family: "Inter", sans-serif;
-}
-
-.div-15 {
-    display: flex;
-    flex-direction: column;
-    max-width: 325px;
-    margin-top: 90px;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    background-color: rgba(44, 92, 218, 1);
-}
-
-.div-16 {
-    display: flex;
-}
-
-@media (max-width: 999px) {
-    .div-16 {
-        flex-direction: column;
-        align-items: stretch;
-    }
-}
-
-.column-6 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: calc(103.04% - 0px);
-    margin-left: 0px;
-}
-
-@media (max-width: 999px) {
-    .column-6 {
-        width: 100%;
-    }
-}
-
-.div-17 {
-    max-width: 305px;
-    color: rgba(255, 255, 255, 1);
-    font-size: 30px;
-    line-height: 40px;
-    letter-spacing: 0%;
-    text-align: left;
-    font-family: "Inter", sans-serif;
+.bg {
+  background-image: url("../image/Login.jpg");
+  height: 100vh;
+  width: 100vw;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
