--- a/frontend/src/meeting/components/join_meeting/JoinMeeting.css
+++ b/frontend/src/meeting/components/join_meeting/JoinMeeting.css
@@ -7,9 +7,14 @@
 }
 
 .div-8 {
+  width:100%;
+  height: 85px;
+  background-color: #9747FF;
+  border-radius: 10px;
+  margin-top: 50px;
   display: flex;
   flex-direction: row;
-  max-width: 37px;
+  /* max-width: 37px; */
   justify-content: center;
   align-items: center;
   box-shadow: 0px 7px 21px 0px rgba(37, 44, 97, 0.20000000298023224),
@@ -18,9 +23,8 @@
   padding-right: 32px;
   padding-bottom: 16px;
   padding-left: 32px;
-  background-color: rgba(151, 71, 255, 1);
   color: rgba(255, 255, 255, 1);
-  font-size: 20px;
+  font-size: 30px;
   line-height: 100%;
   letter-spacing: 0%;
   text-align: left;
