- get sockets working for chat and questions - put chat and questions in list - reverse order of question and chat

--- a/frontend/src/meeting/components/chat/ChatPanel.css
+++ b/frontend/src/meeting/components/chat/ChatPanel.css
@@ -2,6 +2,13 @@
   background-color: lightgray;
 }
 
+.list-group {
+  max-height: 100px;
+  margin-bottom: 10%;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
 .solid {
   border-top: 2px solid #999;
 }
