--- a/frontend/src/meeting/meeting/MainMeetingScratch.css
+++ b/frontend/src/meeting/meeting/MainMeetingScratch.css
@@ -1,7 +1,69 @@
 .meeting-banner-color {
-  background-color: purple;
+  background-color: #800080;
+  }
+  
+  .switch-bg {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  padding: 0 15px;
+  background-color: #800080;
+  }
+  
+  .switch-bg input[type="checkbox"] {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  }
+ /* Set the container height to 100% */
+.container-fluid {
+  height: 100%;
 }
 
-.vertical-column-margin {
-  margin-right: 10%;
+/* Set the row height to 100% */
+.row {
+  height: 100%;
+}
+
+/* Set the column heights to 100% */
+.col-md-4 {
+  height: 100%;
+}
+
+/* Set the column backgrounds */
+.col-md-4:first-child {
+  background-color: #f7f7f7;
+}
+
+.col-md-4:nth-child(2) {
+  background-color: #e7e7e7;
+}
+
+.col-md-4:last-child {
+  background-color: #d7d7d7;
+}
+
+/* Set the column margins and paddings */
+.col-md-4 {
+  margin: 0;
+  padding: 15px;
+}
+
+/* Set the column borders */
+.col-md-4 {
+  border: 1px solid #ccc;
+  border-top: none;
+}
+
+.col-md-4:first-child {
+  border-left: none;
+}
+
+.col-md-4:last-child {
+  border-right: none;
+}
+
+/* Set the column overflow */
+.col-md-4 {
+  overflow: auto;
 }
