--- a/frontend/src/home/Home.css
+++ b/frontend/src/home/Home.css
@@ -1,8 +1,4 @@
-#background-image {
-    background-image: url('../image/Meeting.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+
 
 .container {
     display: flex;
@@ -14,7 +10,7 @@
 .box {
     width: 300px;
     height: 300px;
-    background-color: blue;
+    background-color: #0000ff;
     margin: 100px;
 }
 
