--- a/frontend/src/meeting/meeting/MainMeetingScratch.css
+++ b/frontend/src/meeting/meeting/MainMeetingScratch.css
@@ -1,13 +1,13 @@
-/*  .meeting-banner-color { 
- background-color: white; 
- } 
+.meeting-banner-color {
+  background-color: purple;
+}
 
 .switch-bg {
   display: flex;
   align-items: center;
   height: 100%;
   padding: 0 15px;
-  /* background-color: #800080; 
+  background-color: #800080;
 }
 
 .switch-bg input[type="checkbox"] {
@@ -29,4 +29,4 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-} */
+}
