--- a/frontend/src/home/Home.css
+++ b/frontend/src/home/Home.css
@@ -1,5 +1,3 @@
-
-
 .container {
     display: flex;
     justify-content: center;
@@ -7,10 +5,10 @@
     height: 100vh;
 }
 
-.box {
+.container-1 {
     width: 300px;
     height: 300px;
-    background-color: #0000ff;
+    background-color: blue;
     margin: 100px;
 }
 
