--- a/frontend/src/meeting/components/join_meeting/JoinMeeting.css
+++ b/frontend/src/meeting/components/join_meeting/JoinMeeting.css
@@ -2,13 +2,14 @@
   display: flex;
   flex-direction: column;
   line-height: normal;
-  width: calc(17.1% - 13.333333333333334px);
-  margin-left: 20px;
+  /* width: calc(17.1% - 13.333333333333334px); */
+  width: 17%;
+  margin-left: 0px;
 }
 
 .div-8 {
   width:100%;
-  height: 85px;
+  height: 170px;
   background-color: #9747FF;
   border-radius: 10px;
   margin-top: 50px;
