--- a/frontend/src/meeting/meeting/CreateMeeting.css
+++ b/frontend/src/meeting/meeting/CreateMeeting.css
@@ -1,213 +1,3 @@
-/* .div 
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-  
-.div-2 
-{
-    display: flex;
-    flex-direction: column;
-    max-width: 494px;
-    border-radius: 20px;
-    padding: 18px 21px;
-    background-color: rgba(255, 255, 255, 1);
-}
-
-@media (max-width: 768px) {
-.div {
-    padding: 50px 0;
-}
-
-.div-2 {
-    max-width: 100%;
-    border-radius: 0;
-}
-}
-
-@media (min-width: 768px) {
-.div {
-    padding: 196px 0;
-}
-
-.div-2 {
-    max-width: 452px;
-}
-}
-
-.div-3 {
-display: flex;
-}
-
-@media (max-width: 999px) {
-.div-3 {
-    flex-direction: column;
-    align-items: stretch;
-}
-}
-
-.column {
-display: flex;
-flex-direction: column;
-line-height: normal;
-width: calc(102.03% - 0px);
-margin-left: 0px;
-}
-
-@media (max-width: 999px) {
-.column {
-    width: 100%;
-}
-}
-
-.div-4 {
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
-align-items: center;
-}
-
-.div-5 {
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
-align-items: flex-start;
-}
-
-.div-6 {
-max-width: 39px;
-color: rgba(0, 0, 0, 1);
-font-size: 30px;
-letter-spacing: 0%;
-text-align: left;
-font-family: "Inter", sans-serif;
-}
-
-.div-7 {
-display: flex;
-max-width: 453px;
-height: 72px;
-width: 453px;
-margin-top: 10px;
-border-radius: 10px;
-border-color: rgba(0, 0, 0, 1);
-border-width: 2px;
-border-style: solid;
-background-color: rgba(217, 217, 217, 1);
-}
-
-.div-8 {
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
-align-items: flex-start;
-margin-top: 30px;
-}
-
-.div-9 {
-max-width: 159px;
-color: rgba(0, 0, 0, 1);
-font-size: 30px;
-letter-spacing: 0%;
-text-align: left;
-font-family: "Inter", sans-serif;
-}
-
-.div-11 {
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
-align-items: flex-start;
-margin-top: 30px;
-}
-
-.div-12 {
-max-width: 143px;
-color: rgba(0, 0, 0, 1);
-font-size: 30px;
-letter-spacing: 0%;
-text-align: left;
-font-family: "Inter", sans-serif;
-}
-
-.div-13 {
-    font-size: 16px;
-    font-weight: 550;
-    display: flex;
-    max-width: 453px;
-    height: 72px;
-    width: 453px;
-    margin-top: 10px;
-    border-radius: 10px;
-    border-color: rgba(0, 0, 0, 1);
-    border-width: 2px;
-    border-style: solid;
-    background-color: rgba(217, 217, 217, 1);
-}
-
-.div-14 {
-    display: flex;
-    flex-direction: column;
-    max-width: 452px;
-    justify-content: flex-start;
-    align-items: flex-start;
-    margin-top: 30px;
-}
-
-.div-15 {
-    
-    width: 167px;
-    height: 36px;
-
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 30px;
-    line-height: 36px;
-
-    color: #000000;
-
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-}
-
-.div-16 {
-    display: flex;
-    max-width: 453px;
-    height: 72px;
-    width: 453px;
-    margin-top: 10px;
-    border-radius: 10px;
-    border-color: rgba(0, 0, 0, 1);
-    border-width: 2px;
-    border-style: solid;
-    background-color: rgba(217, 217, 217, 1);
-}
-
-.div-17 {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;
-    margin-top: 30px;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    background-color: rgba(44, 92, 218, 1);
-    color: rgba(255, 255, 255, 1);
-    font-size: 30px;
-    line-height: 40px;
-    letter-spacing: 0%;
-    text-align: left;
-    font-family: "Inter", sans-serif;
-} */
 
 .color-overlay {
     position: absolute;
@@ -218,6 +8,22 @@ font-family: "Inter", sans-serif;
   }
   
   form {
+    height: 650px;
+    width: 750px;
     background-color: white;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+  }
+
+  .title{
+    font-size: 20px;
+  }
+
+  .length{
+    width: 90%;
+    height: 50px;
+  }
+
+  .button{
+    width: 100px;
+    height: 50px;
   }
