--- a/frontend/src/meeting/components/chat/ChatPanel.css
+++ b/frontend/src/meeting/components/chat/ChatPanel.css
@@ -1,7 +1,9 @@
 .chat-panel {
   background-color: lightgray;
-  width: 20vw;
-  height: 80vh;
+  width: 15vw;
+  height: 75vh;
+  /* display: flex;
+  flex-direction: column; */
 }
 
 .list-group {
