--- a/frontend/src/meeting/meeting/MainMeetingScratch.css
+++ b/frontend/src/meeting/meeting/MainMeetingScratch.css
@@ -2,31 +2,27 @@
   background-color: purple;
 }
 
-.switch-bg {
-  display: flex;
-  align-items: center;
-  height: 100%;
-  padding: 0 15px;
-  background-color: #800080;
-}
-
-.switch-bg input[type="checkbox"] {
-  width: 20px;
-  height: 20px;
-  margin-right: 10px;
+.title {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .main {
-  width: 100%;
-  height: 80%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  /* width: 100vw;
+  height: 75vh; */
+  position: absolute;
+  top: calc(50% - 40vh);
+  left: 50%;
+  transform: translate(-50%);
 }
 
-.iframe {
-  height: 80%;
+iframe {
+  width: 60vw;
+  height: 70vh;
+}
+
+.form-check-inline {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  align-items: center;
 }
