--- a/frontend/src/meeting/meeting/CreateMeeting.css
+++ b/frontend/src/meeting/meeting/CreateMeeting.css
@@ -1,29 +1,59 @@
-
 .color-overlay {
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.2);
-    height: 100%;
-    width: 100%;
-    mix-blend-mode: normal;
-  }
-  
-  form {
-    height: 650px;
-    width: 750px;
-    background-color: white;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-  }
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 100%;
+  width: 100%;
+  mix-blend-mode: normal;
+}
 
-  .title{
-    font-size: 20px;
-  }
+form {
+  height: 650px;
+  width: 750px;
+  background-color: white;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+}
 
-  .length{
-    width: 90%;
-    height: 50px;
-  }
+.title {
+  font-size: 20px;
+}
 
-  .button{
-    width: 100px;
-    height: 50px;
-  }
+.length {
+  width: 90%;
+  height: 50px;
+}
+
+.button {
+  width: 100px;
+  height: 50px;
+}
+
+.chip {
+  display: inline-block;
+  padding: 0 25px;
+  height: 50px;
+  font-size: 18px;
+  line-height: 50px;
+  border-radius: 25px;
+  /* background-color: #f1f1f1; */
+}
+
+.chip img {
+  float: left;
+  margin: 0 10px 0 -25px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+}
+
+.closebtn {
+  padding-left: 10px;
+  color: #888;
+  font-weight: bold;
+  float: right;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.closebtn:hover {
+  color: #000;
+}
