--- a/frontend/src/meeting/meeting/CreateMeeting.css
+++ b/frontend/src/meeting/meeting/CreateMeeting.css
@@ -7,7 +7,7 @@
 }
 
 form {
-  height: 650px;
+  height: 850px;
   width: 750px;
   background-color: white;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
@@ -15,6 +15,7 @@ form {
 
 .title {
   font-size: 20px;
+  margin-left: 0;
 }
 
 .length {
