add menu for userHome and EditUsers

--- a/frontend/src/home/Home.css
+++ b/frontend/src/home/Home.css
@@ -29,11 +29,11 @@
     color: aliceblue;
 }
 
-.word:hover{
+/* .word:hover{
   font-size: 40px;
   margin-left:7%;
   margin-right: 3%;
-}
+} */
 
 .navbar {
     padding: 20px;
