--- a/frontend/src/home/Home.css
+++ b/frontend/src/home/Home.css
@@ -21,7 +21,7 @@
     margin-top: 20px;
 }
 
-.word {
+.words {
     font-size: 35px;
     font-weight: 1000;
     margin-top: 10px;
@@ -29,11 +29,13 @@
     color: aliceblue;
 }
 
-/* .word:hover{
-  font-size: 40px;
-  margin-left:7%;
-  margin-right: 3%;
-} */
+.word-2 {
+  font-size: 35px;
+  font-weight: 1000;
+  margin-top: 10px;
+  margin-left: 35%;
+  color: aliceblue;
+}
 
 .home-nav {
     padding: 20px;
