--- a/frontend/src/Login/LoginPanel.css
+++ b/frontend/src/Login/LoginPanel.css
@@ -6,6 +6,23 @@
   mix-blend-mode: normal;
 }
 
+.welcome{
+  color: white;
+  font-size: 70px;
+  margin-left: 60%;
+  margin-top: 4%;
+}
+
+.logo{
+  margin: 50px;
+  margin-left: 10%;
+}
+
+.logo-1{
+  height: 200px;
+  width: 500px;
+}
+
 div.card-bg {
   background-color: white;
   height: 750px;
