--- a/frontend/src/home/Home.css
+++ b/frontend/src/home/Home.css
@@ -17,8 +17,9 @@
     color: white;
     width: 300px;
     height: 300px;
-    margin-left: 50px;
-    margin-top: 20px;
+    /* margin-left: 50px;
+    margin-top: 20px; */
+    padding-right: 10%;
 }
 
 .words {
