--- a/frontend/src/meeting/components/join_meeting/JoinMeeting.css
+++ b/frontend/src/meeting/components/join_meeting/JoinMeeting.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   line-height: normal;
+  min-width: 100px;
   /* width: calc(17.1% - 13.333333333333334px); */
   width: 17%;
   margin-left: 0px;
