--- a/frontend/src/Login/LoginPanel.css
+++ b/frontend/src/Login/LoginPanel.css
@@ -25,9 +25,16 @@
 
 div.card-bg {
   background-color: white;
-  height: 750px;
-  width: 750px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 767px) {
+  div.card-bg {
+    background-color: white;
+    height: min-content;
+    width: 30%;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+  }
 }
 
 .button-col {
@@ -36,6 +43,13 @@ div.card-bg {
   align-items: stretch;
 }
 
-.button-margin {
-  margin-bottom: 10%;
+.button-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-btn {
+  height: 25%;
+  margin-bottom: 5%;
 }
