--- a/frontend/src/meeting/components/join_meeting/JoinMeeting.css
+++ b/frontend/src/meeting/components/join_meeting/JoinMeeting.css
@@ -9,26 +9,27 @@
 }
 
 .div-8 {
-  width:100%;
-  height: 170px;
+  width:fit-content;
+  /* height: 170px; */
   background-color: #9747FF;
   border-radius: 10px;
-  margin-top: 50px;
-  display: flex;
-  flex-direction: row;
+  margin-top: 5%;
+  height: 15vh;
+  /* display: flex;
+  flex-direction: row; */
   /* max-width: 37px; */
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0px 7px 21px 0px rgba(37, 44, 97, 0.20000000298023224),
-    0px 3px 8px 0px rgba(136, 144, 194, 0.25);
-  padding-top: 16px;
-  padding-right: 32px;
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* box-shadow: 0px 7px 21px 0px rgba(37, 44, 97, 0.20000000298023224), */
+    /* 0px 3px 8px 0px rgba(136, 144, 194, 0.25); */
+  /* padding-top: 16px; */
+  /* padding-right: 32px;
   padding-bottom: 16px;
-  padding-left: 32px;
+  padding-left: 32px; */
   color: rgba(255, 255, 255, 1);
   font-size: 30px;
-  line-height: 100%;
-  letter-spacing: 0%;
-  text-align: left;
-  font-family: "Lato", sans-serif;
+  /* line-height: 100%;
+  letter-spacing: 0%; */
+  /* text-align: left;
+  font-family: "Lato", sans-serif; */
 }
