--- a/frontend/src/meeting/meeting/MeetingList.css
+++ b/frontend/src/meeting/meeting/MeetingList.css
@@ -1,28 +1,21 @@
-.Container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
+/* .container-1{
+    height: 100%;
+    width: 100%;
+} */
 
-#background-image {
-    background-image: url('../../image/Meeting.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.box{
-    width: 50%;
-    height: 70%;
+.box0{
+    max-height: 90vh;
     background-color: white;
     border-radius: 20px;
     display:flex;
     flex-direction:column;
-    margin: 0 auto;
-    padding-right: 5%;
-    align-items:normal;
-    overflow: auto;
-    position: relative;
+    margin-top: 10vh;
+    margin-bottom: 5vh;
+    /* padding-top: 70vh; */
+    /* padding-bottom: 5vh; */
+    align-items:center;
+    overflow:scroll;
+    position:relative;
 }
 
 .return{
@@ -43,22 +36,31 @@
 
 .box1{
     display:flex;
+    /* flex: 0; */
+    /* flex-direction:column-reverse; */
+    justify-content:center;
+    width: 90%;
+    max-width: 90vw;
+    max-height: 20vh;
+    /* height: auto; */
 }
 
 .box2{
     width: 50%;
     /* height:85px; */
-    height: 170px;
+    height: 15vh;
+    max-height: 20vh;
+    max-width: 55vw;
     background-color: blue;
     border-radius: 10px;
     display: block;
-    margin-right: 0px;
-    margin-left: 8%;
-    margin-top: 50px;
+    /* margin-right: 0px; */
+    /* margin-left: 20px; */
+    margin-top: 5%;
     display: flex;
 }
 
-.box2-student{
+/* .box2-student{
     width: 50%;
     height:85px;
     background-color: blue;
@@ -67,18 +69,20 @@
     margin-right: 0px;
     margin-left: 15%;
     margin-top: 50px;
-}
+} */
 
 .box3{
     flex: 1;
     width: 50%;
     height: 100%;
     border-right: 1px dashed rgb(18, 189, 246);
+    overflow: scroll;
 }
 
 .box4{
     flex: 1;
     width: 50%;
+    overflow: scroll;
     /* background-color: rgb(46, 89, 245); */
 }
 
@@ -112,48 +116,51 @@
     /* text-overflow: ellipsis; */
 }
 
-.join{
+/* .join{
     display: flex;
     width: 125px;
     height: 85px;
     background-color: #9747FF;
     border-radius: 10px;
     margin-top: 50px;
-}
+} */
 
 .edit{
-    width: 17%;
-    min-width: 100px;
+    width:fit-content;
+    /* min-width: 100px; */
     margin-left: 0px;  
-    width: 17%;
-    height: 170px;
+    /* width: 17%; */
+    /* height: 170px; */
+    height: 15vh;
     background-color: #FF7347;
     border-radius: 10px;
     padding-right: 2%;
-    margin-top: 50px; 
+    margin-top: 5%; 
 }
 
 .share{
-    width: 17%;
-    min-width: 100px;
+    width: fit-content;
+    /* min-width: 100px; */
     margin-left: 0px;  
-    width: 17%;
-    height: 170px;
+    /* width: 17%; */
+    /* height: 170px; */
+    height: 15vh;
     background-color: #f0309a;
     border-radius: 10px;
     padding-right: 3%;
-    margin-top: 50px; 
-    text-overflow: ellipsis;
+    margin-top: 5%; 
+    /* text-overflow: ellipsis; */
 }
 
 .delete{
-    width: 17%;
-    height: 170px;
-    min-width: 100px;
+    width: fit-content;
+    /* height: 170px; */
+    /* min-width: 100px; */
+    height: 15vh;
     background-color: #4784ff;
     border-radius: 10px;
-    /* margin-right: 5%; */
-    margin-top: 50px;
+    margin-right: 3%;
+    margin-top: 5%;
 }
 
 .content-1{
