--- a/frontend/src/users/UsersHome.css
+++ b/frontend/src/users/UsersHome.css
@@ -1,53 +1,3 @@
-/* .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.container-1 {
-  width: 400px;
-  height: 400px;
-  background-color: blue;
-  margin: 100px;
-  cursor: pointer;
-  border-radius: 15px;
-}
-
-.icon {
-  color: white;
-  width: 200px;
-  height: 200px;
-  margin-left: 50px;
-  margin-top: 20px;
-}
-
-.word {
-  font-size: 35px;
-  font-weight: 1000;
-  margin-top: 10px;
-  margin-left: 12%;
-  color: aliceblue;
-}
-
-.word:hover {
-  font-size: 40px;
-  margin-left: 7%;
-  margin-right: 3%;
-}
-
-.container-2 {
-  margin-right: 0px;
-}
-
-.menu {
-  float: right;
-  font-size: 70px;
-  margin-top: 40px;
-  margin-left: 0;
-  color: white;
-} */
-
 .container {
   display: flex;
   justify-content: center;
@@ -56,48 +6,40 @@
 }
 
 .container-1 {
-  width: 400px;
-  height: 400px;
-  background-color: blue;
-  margin: 100px;
-  cursor:pointer;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+background-color: blue;
+cursor: pointer;
+height: 100%;
+min-width: 20vw;
 }
 
 .icon {
-  color: white;
-  width: 350px;
-  height: 250px;
-  margin-left: 50px;
-  margin-right: 40px;
-  margin-top: 20px;
-}
-
-.word {
-  font-size: 35px;
-  font-weight: 1000;
-  margin-top: 10px;
-  margin-left: 12%;
-  color: aliceblue;
+color: white;
+font-size: 10vw; /* set font size based on viewport width */
+margin-bottom: 0.5rem;
 }
 
 .word-1 {
-  font-size: 35px;
-  font-weight: 1000;
-  margin-top: 10px;
-  margin-left: 25%;
-  color: aliceblue;
+font-size: 2vw; /* set font size based on viewport width */
+font-weight: 1000;
+color: aliceblue;
+text-align: center;
+white-space: nowrap; /* prevent text from wrapping */
+overflow: hidden; /* hide overflowed text */
+text-overflow: ellipsis; /* add ellipsis to indicate hidden text */
 }
 
-.word:hover{
-  font-size: 40px;
-  margin-left:7%;
-  margin-right: 3%;
-  }
+@media screen and (max-width: 768px) {
+.icon {
+  font-size: 2em;
+}
 
-.word-1:hover{
-font-size: 40px;
-margin-left:25%;
-margin-right: 3%;
+.word-1 {
+  font-size: 16px;
+}
 }
 
 .home-nav {
@@ -107,12 +49,6 @@ margin-right: 3%;
   /* border-bottom: 1px solid white; */
   margin-left: 90%; 
 }
-
-.container-2{
-  margin-right: 0px;
-  /* margin-top: 40px; */
-}
-
 
 .menu{
   float: right;
@@ -155,4 +91,14 @@ font-size: 42px;
 
 .dropdown2:hover{
 font-size: 42px;
+}
+
+.home-icons {
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
+position: absolute;
+left: 50%;
+transform: translate(-50%);
 }
