loading button fixed

--- a/frontend/src/meeting/meeting/MainMeetingScratch.css
+++ b/frontend/src/meeting/meeting/MainMeetingScratch.css
@@ -59,9 +59,18 @@ iframe {
 
 .spinner {
   height: 100vh;
+  /* font-size: 60px; */
   display: flex;
   align-Items: center;
   justify-Content: center;
+  /* margin-left: 500px; */
+}
+
+.spinner-parent{
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  margin-left: 50vw;
 }
 
 .dark-mode {
