--- a/frontend/src/home/Home.css
+++ b/frontend/src/home/Home.css
@@ -5,19 +5,22 @@
     height: 100vh;
 }
 
-.container-1 {
+.Containers-1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: blue;
   cursor: pointer;
-  height: 100%;
+  max-height: 35vh;
+  /* min-height: 12vw; */
   min-width: 20vw;
-}
+  }
+  
 
-.icon {
+.icon-1 {
   color: white;
+  margin-top: 3%;
   font-size: 10vw; /* set font size based on viewport width */
   margin-bottom: 0.5rem;
 }
@@ -32,8 +35,15 @@
   text-overflow: ellipsis; /* add ellipsis to indicate hidden text */
 }
 
+@media screen and (max-width: 1768px) {
+  .Containers-1{
+    max-height: 28vh;
+  }
+}
+
+
 @media screen and (max-width: 768px) {
-  .icon {
+  .icon-1 {
     font-size: 2em;
   }
   
@@ -101,4 +111,18 @@
   position: absolute;
   left: 50%;
   transform: translate(-50%);
+}
+
+@media screen and (max-width:377px) and (max-height:669px) {
+  .Containers-1{
+    max-width: 30vw;
+    max-height: 15vh;
+  }
+  .icon-1{
+    font-size: 2rem;
+  }
+  .words, .word-2 {
+    font-size: 2vw;
+  }
+
 }
