--- a/frontend/src/users/UserDetails.css
+++ b/frontend/src/users/UserDetails.css
@@ -10,3 +10,9 @@ form {
   background-color: white;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
+
+@media screen and (max-width:376px) and (max-height:668px) {
+  .password{
+    display: block;
+  }
+}
