--- a/frontend/src/meeting/components/join_meeting/JoinMeeting.css
+++ b/frontend/src/meeting/components/join_meeting/JoinMeeting.css
@@ -27,7 +27,7 @@
   padding-bottom: 16px;
   padding-left: 32px; */
   color: rgba(255, 255, 255, 1);
-  font-size: 2rem;
+  font-size: 2vw;
   /* line-height: 100%;
   letter-spacing: 0%; */
   /* text-align: left;
